--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ SMTP_HOST = "smtp.gmail.com"
 SMTP_PORT = 587
 SMTP_USER = victor.testernodejs@gmail.com
 SMTP_PASSWORD = "z123x456c789"
-API_URL = http://localhost:7000
-CLIENT_URL = http://localhost:3000
+API_URL = http://192.168.35.2:7000
+CLIENT_URL = http://192.168.35.2:3000
+
