--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.12.14",
     "nodemailer": "^6.6.2",
     "react": "^17.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ws": "^7.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
