--- a/.env
+++ b/.env
@@ -10,7 +10,8 @@ SMTP_PASSWORD = "z123x456c789"
 
 
 
-API_URL = http://192.168.35.2:7000
-CLIENT_URL = http://192.168.35.2:3000
-API_WS = 192.168.35.2
+API_URL = http://192.168.100.100:7000
+CLIENT_URL = http://192.168.100.100:3000
+1CLIENT_URL = http://192.168.100.100:3000
+API_WS = 192.168.100.100
 
