--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -26,7 +27,7 @@
     "ws": "^7.5.0"
   },
   "devDependencies": {
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.7"
   }
 }
