--- a/.env
+++ b/.env
@@ -10,8 +10,18 @@ SMTP_PASSWORD = "z123x456c789"
 
 
 
-API_URL = http://192.168.100.100:7000
-CLIENT_URL = http://192.168.100.100:3000
-1CLIENT_URL = http://192.168.100.100:3000
+API_URL = https://my-game-server.herokuapp.com
+DEV_API_URL = http://localhost:7000
+
+CLIENT_URL = https://games-page.herokuapp.com
+DEV_CLIENT_URL = http://localhost:3000
+
+
+
+
+
+
 API_WS = 192.168.100.100
+DEV_API_WS =
+1DEV_API_WS = 127.0.0.1
 
