--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ SMTP_PASSWORD = "z123x456c789"
 API_URL = https://my-game-server.herokuapp.com
 DEV_API_URL = http://localhost:7000
 
-CLIENT_URL = https://games-page.herokuapp.com/
+CLIENT_URL = https://games-page.herokuapp.com
 DEV_CLIENT_URL = http://localhost:3000
 
 
